fixed styling issue causing chess pieces to be placed behind board

--- a/src/components/Figure/figure.module.scss
+++ b/src/components/Figure/figure.module.scss
@@ -1,4 +1,5 @@
 .figure {
+  position: absolute;
   width: 12.5%;
   height: 12.5%;
   padding: 6px;
